--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,10 @@
     "grunt-contrib-connect": ">=1.0.1",
     "grunt-contrib-jshint": ">=1.0.0",
     "grunt-karma": ">=0.12.2",
+    "grunt-serve": "^0.1.6",
     "karma": "^1.7.0",
     "karma-coverage": ">=0.5.5",
-    "karma-jasmine": "~0.1.6",
+    "karma-jasmine": "^0.1.6",
     "karma-phantomjs-launcher": ">=1.0.0",
     "matchdep": ">=1.0.1",
     "serve-static": ">=1.10.2"
